--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -70,5 +70,11 @@
     <array>
         <string>_ws._tcp</string>
     </array>
+
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Add a description for why you need this permission</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Add a description for why you need this permission</string>
+
 </dict>
 </plist>
