--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -17,9 +17,9 @@
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
-        android:icon="@drawable/app_image"
+        android:icon="@drawable/nearvibe_logo"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/app_image"
+        android:roundIcon="@drawable/nearvibe_logo"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Material.Light.NoActionBar"
         android:usesCleartextTraffic="true">
